# conan-config

extensions/commands/dot-utils/: analyzer.py  cmd_analyze.py  cmd_blitz.py  cmd_cmaketargets.py  cmd_doc.py  cmd_generate.py  errors.py  formats.py
extensions/commands/dot-utils/templates/: conanfile.py
extensions/deploy/: all_merged.py  include.py  lib.py  licenses.py
templates/command/new/default/: CMakeLists.txt  conanfile.py
templates/command/new/default/src/: main.cpp
templates/command/new/default/src/conan_if/: ILog.hpp
templates/command/new/default/src/conan_imp/: Log.cpp  Log.hpp
templates/command/new/default/test_package/: CMakeLists.txt  conanfile.py  log_test.cpp  main.cpp
